# Vizualy.Ai

./: package-lock.json
backend/: main.py  pyproject.toml
backend/app/api/: routes.py
backend/app/models/: users.py
backend/app/services/: llm.py  mermaid_services.py  user.py
backend/app/utils/: auth.py  prompts.py
frontend/: middleware.js  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/(auth)/: layout.js
frontend/app/(auth)/sign-in/[[...sign-in]]/: page.js
frontend/app/(auth)/sign-up/[[...sign-up]]/: page.js
frontend/app/(user)/: layout.js
frontend/app/(user)/_components/: ai-message.js  history.js  logo-icon.js  logo.js  mermaid.js  user-input.js  user-logo.js  user-navbar.js
frontend/app/(user)/chat/[id]/: page.js
frontend/components/: Navbar.js
frontend/components/ui/: animated-button.js  button.js  input.js  loader.js  sidebar.js  theme-switcher.js
frontend/hooks/: useChat.js  usePdfText.js  useSyncUser.js
frontend/store/: chat.js  chatHistory.js  user.js
